<resources>
    <string name="app_name">Control Alumnos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="editText2">Ingresar nombre del Alumno</string>
    <string name="editText5">Consulta Alumnos</string>
    <string name="textView2">Importe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alta_alumno">Alta Alumno</string>
    <string name="agenda">Agenda</string>
    <string name="pagos">Pagos</string>
    <string name="consultas">Consultas</string>
    <string name="herramientas">Herramientas</string>
    <string name="estad_stica">Estadìstica</string>
    <string name="exportar_excel">Exportar Excel</string>
    <string name="importar_archivo">Importar</string>
</resources>
